dark mode fixes for list

--- a/starsky/starsky/clientapp/src/style/css/21-archive-folder-flatlist.css
+++ b/starsky/starsky/clientapp/src/style/css/21-archive-folder-flatlist.css
@@ -4,6 +4,13 @@
   border-bottom: 1px solid #eceff1;
   margin-top: 15px;
 }
+@media (prefers-color-scheme: dark) {
+  .folder-flat {
+    border-top: 1px solid #607d8b;
+    border-bottom: 1px solid #607d8b;
+  }
+}
+
 .list-flat-box > button {
   display: inline-block;
   width: 100%;
@@ -22,6 +29,12 @@
   .folder-flat .flatlistitem {
     padding-left: 10px;
     padding-right: 10px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .folder-flat .flatlistitem {
+    color: #fff;
   }
 }
 
@@ -57,6 +70,12 @@
   display: inline-block;
 }
 
+@media (prefers-color-scheme: dark) {
+  .flatlistitem .icon {
+    filter: invert(100%);
+  }
+}
+
 .flatlistitem .icon.imageformat-jpg {
   background-image: url("../images/baseline-file-jpg-24px.svg");
 }
@@ -83,6 +102,15 @@
 
 .list-flat-box:nth-child(even) {
   background-color: #eceff1;
+}
+
+@media (prefers-color-scheme: dark) {
+  .list-flat-box:nth-child(odd) {
+    background-color: #263238;
+  }
+  .list-flat-box:nth-child(even) {
+    background-color: #455a64;
+  }
 }
 
 .flatlistitem .name,
